# SDL-Nbody

./: .gitignore  .gitmodules  CMakeLists.txt  main.c  nbody.c  nbody.h
include/: body.h  nbody.h
src/: body.c  nbody.c
